external-crates/move/crates/move-compiler/tests/move_check/parser/address_too_long_decimal.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01005]: invalid address
  ┌─ tests/move_check/parser/address_too_long_decimal.move:1:9
  │
1 │ address 340282366920938463463374607431768211456123451234512345123451234512345123451234576969869689 {
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid address literal. The numeric value is too large. The maximum size is 32 bytes
